// Copyright 2023 Vibtree, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package media_router;
option go_package = "github.com/vibtreeofficial/protocol/media-router";
option csharp_namespace = "MediaRouter.Proto";
option ruby_package = "MediaRouter::Proto";

import "google/protobuf/timestamp.proto";

message MetricsBatch {
  int64 timestamp_ms = 1;
  repeated TimeSeriesMetric time_series = 2;
  repeated EventMetric events = 3;
  string str_data = 4;
}

message TimeSeriesMetric {
  uint32 label = 1;
  string participant_identity = 2;
  string track_sid = 3;
  repeated MetricSample samples = 4;
  string rid = 5;
}

message MetricSample {
  int64 timestamp_ms = 1;
  google.protobuf.Timestamp normalized_timestamp = 2;
  float value = 3;
}

message EventMetric {
  uint32 label = 1;
  string participant_identity = 2;
  string track_sid = 3;
  int64 start_timestamp_ms = 4;
  int64 end_timestamp_ms = 5;
  google.protobuf.Timestamp normalized_start_timestamp = 6;
  google.protobuf.Timestamp normalized_end_timestamp = 7;
  string metadata = 8;
  string rid = 9;
}
